--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 </div>
                 <div class="header-text">
                     <h1>Revolutionary Attendance Management System</h1>
-                    <p>Advanced Proximity Detection and Facial Recognition Technology for Educational Institutions</p>
+                    <p>Classroom Presence Detection and Facial Recognition Technology for Educational Institutions</p>
                 </div>
             </div>
         </div>
@@ -81,7 +81,7 @@
                 <div class="solution-overview">
                     <div class="solution-concept">
                         <h3>Revolutionary Approach</h3>
-                        <p>A next-generation attendance system that combines <strong>advanced proximity detection</strong> with <strong>facial recognition</strong> to ensure 100% proxy-free attendance—eliminating loopholes present in traditional methods.</p>
+                        <p>A next-generation attendance system that combines <strong>Classroom presence detection</strong> with <strong>Facial recognition</strong> to ensure 100% proxy-free attendance, eliminating loopholes present in traditional methods.</p>
                     </div>
 
                     <div class="solution-features">
@@ -148,7 +148,7 @@
                                     <p>Proxy-prone, shareable</p>
                                 </div>
                                 <div class="solution-side">
-                                    <h5>✅ Advanced Proximity Detection + Face Recognition</h5>
+                                    <h5>✅ Face Recognition</h5>
                                     <p>Physical presence required</p>
                                 </div>
                             </div>
