--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
             </section>
 
             <!-- Solution Section -->
-            <section class="solution-section">
+            <section class="solution-section" id="solution">
                 <div class="section-header">
                     <h2>Our Solution</h2>
                     <p>Smart Attend: Addressing Every Challenge with Innovation</p>
