--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
         <div class="container">
             <div class="header-content">
                 <div class="logo">
-                    <img src="WhatsApp Image 2025-06-24 at 14.58.19_25a86310.jpg" alt="AttendX Logo" class="logo-image">
+                    <img src="WhatsApp_Image_2025-07-15_at_00.57.07_c05b79bd-removebg-preview.png" alt="AttendX Logo" class="logo-image">
                     <span>AttendX</span>
                 </div>
                 <div class="header-text">
                     <h1>Revolutionary Attendance Management System</h1>
-                    <p>Classroom Presence Detection and Facial Recognition Technology for Educational Institutions</p>
+                    <p>Hybrid BLE and Facial Recognition Technology for Educational Institutions</p>
                 </div>
             </div>
         </div>
@@ -72,7 +72,7 @@
             </section>
 
             <!-- Solution Section -->
-            <section class="solution-section" id="solution">
+            <section class="solution-section">
                 <div class="section-header">
                     <h2>Our Solution</h2>
                     <p>Smart Attend: Addressing Every Challenge with Innovation</p>
@@ -81,7 +81,7 @@
                 <div class="solution-overview">
                     <div class="solution-concept">
                         <h3>Revolutionary Approach</h3>
-                        <p>A next-generation attendance system that combines <strong>Classroom presence detection</strong> with <strong>Facial recognition</strong> to ensure 100% proxy-free attendance, eliminating loopholes present in traditional methods.</p>
+                        <p>A hybrid attendance system combining <strong>BLE (Bluetooth Low Energy)</strong> signals with <strong>facial recognition</strong> to ensure completely proxy-free attendance marking while solving all existing problems.</p>
                     </div>
 
                     <div class="solution-features">
@@ -114,7 +114,7 @@
                     </div>
 
                     <div class="key-advantages">
-                        <h3>Why AttendX?</h3>
+                        <h3>Why Smart Attend?</h3>
                         <div class="advantages-grid">
                             <div class="advantage-item">
                                 <div class="advantage-icon">⚡</div>
@@ -148,7 +148,7 @@
                                     <p>Proxy-prone, shareable</p>
                                 </div>
                                 <div class="solution-side">
-                                    <h5>✅ Face Recognition</h5>
+                                    <h5>✅ BLE + Face Recognition</h5>
                                     <p>Physical presence required</p>
                                 </div>
                             </div>
@@ -184,7 +184,7 @@
         <div class="container">
             <div class="footer-content">
                 <div class="footer-brand">
-                    <img src="WhatsApp Image 2025-06-24 at 14.58.19_25a86310.jpg" alt="AttendX Logo" class="logo-image">
+                    <img src="WhatsApp_Image_2025-07-15_at_00.57.07_c05b79bd-removebg-preview.png" alt="AttendX Logo" class="logo-image">
                     <span>AttendX</span>
                 </div>
                 <p>Transforming Educational Attendance Management</p>
